--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "phalconvee@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "guzzlehttp/guzzle": "^6.5"
+    },
     "autoload": {
         "psr-4": {
             "PhalconVee\\Joker\\": "src/"
